# bkflow-feel

./: .pre-commit-config.yaml  README.md  pyproject.toml  release.md
bkflow_feel/: FEEL.lark  __init__.py  __version__.py  api.py  data_models.py  parsers.py  transformer.py  utils.py  validators.py
docs/: grammer.md
tests/: functions.py  test_feel_parsers.py
